--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,34 +1,34 @@
 @media screen and (max-width: 1000px) {
- p {
+  p {
     font-size: 0.9rem;
-    line-height: 1.9rem;
- }
+    line-height: 1.8;
+  }
 
- .grid-3 {
+  .grid-3 {
     gap: 1rem;
- }
+  }
 
- .skills-right ul li {
+  .skills-right ul li {
     font-size: 0.9rem;
- }
+  }
 }
 
 @media screen and (max-width: 825px) {
   /* Burger */
- .burger {
-   display: block;
-   cursor: pointer;
+  .burger {
+    display: block;
+    cursor: pointer;
   }
 
-  .toggle-burger .Line-1 {
-    transition: rotate(-45deg) translate(-5px, 7px);
+  .toggle-burger .line-1 {
+    transform: rotate(-45deg) translate(-5px, 7px);
   }
 
-  .toggle-burger .Line-2 {
+  .toggle-burger .line-2 {
     opacity: 0;
   }
 
-  .toggle-burger .Line-3 {
+  .toggle-burger .line-3 {
     transform: rotate(45deg) translate(-5px, -7px);
   }
 
@@ -41,10 +41,10 @@
     height: 100vh;
     flex-direction: column;
     background: var(--primaryBackgroundColor);
-    border-left: 1px solid var(borderColor);
+    border-left: 1px solid var(--borderColor);
     z-index: 9;
     transform: translateX(100%);
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
   }
 
   nav ul {
@@ -57,12 +57,14 @@
   .nav-active {
     transform: translateX(0);
   }
+  /* End of Navigation */
 
   :root {
-    --sectionPadding: 4rem;
+    --sectionPadding: 4rem 0;
   }
 
-  .section-litle {
+  /* Titles */
+  .section-title {
     font-size: 1.6rem;
     margin: 0.6rem 0 2.5rem;
   }
@@ -82,7 +84,7 @@
   }
 
   .hero-right img {
-    width: 70;
+    width: 70%;
   }
 
   .hero-left {
@@ -104,20 +106,20 @@
     gap: 1rem;
   }
 
-  /* Footer Section */
+  /* Footer */
   footer {
     padding: 2rem 0;
   }
 }
 
-@media screen and (max-width: 1000px) {
- /* Titles */
- .section-title {
-   font-size: 1.3rem;
- }
+/* Mobile Size */
+@media screen and (max-width: 640px) {
+  /* Titles */
+  .section-title {
+    font-size: 1.3rem;
+  }
 
- .pre-title {
+  .pre-title {
     font-size: 0.7rem;
- }
+  }
 }
-
